--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 	body{
 		background-image:url(back.jpg);
-		/*background-repeat:no-repeat;*/
+		background-repeat:no-repeat;
 		background-position:center;
 		margin: 0;
 		padding: 0;
