--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,10 @@
 </head>
 <style type="text/css">
 	body{
-		background-image:url(back.jpg);
-		background-repeat:no-repeat;
-		background-position:center;
+		/*background-image:url(back.svg);*/
+		/*background-repeat:no-repeat;*/
+		/*background-position:center;*/
+		overflow: hidden;
 		margin: 0;
 		padding: 0;
 	}
@@ -60,6 +61,7 @@
 		<div class="block">Design</div>
 	</div>
 	<div id="content"></div>
+	<img src="back.jpg">
 </body>
 <script type="text/javascript">
 	window.onload=function(){repos ()};
