--- a/index2.html
+++ b/index2.html
@@ -34,28 +34,22 @@
 		width: 70px;
 		height: 70px;
 		color: #fff;
-		line-height: 70px
-		/*background-color: #00e6c9;*/
+		line-height: 70px;
+		background-color:#000000;
+		transition: all 0.3s linear;
+	}
+	.block:hover{
+		/*opacity: 0.4;*/
+		color: #908BC5;
+		border-left:solid; 
+		
+		border-width: 2px;
+		/*margin-left: 2px;*/
 	}
 </style>
 <body>
 	<div id="cross">
-		<div class="block">
-			<svg x="0px" y="0px" viewBox="0 0 70 70" xml:space="preserve">
-				<g>
-					<path fill="#FFFFFF" d="M25.8,40.9l-0.6,1.3c-3,6.2-5,10.6-6,13.2c-1.5,4.1-2.4,6.5-2.6,7.2c-0.6,1.9-1.4,2.9-2.4,2.9
-					c-0.7,0-1.3-0.3-1.8-0.9c-0.4-0.5-0.6-1.1-0.6-1.8c0-2.5,3.2-10.2,9.5-23.3c-1.1-0.9-1.7-1.7-1.7-2.6c0-0.7,0.3-1.2,0.9-1.7
-					c0.5-0.4,1-0.6,1.6-0.6c0.4,0,0.9,0.1,1.6,0.3c4.7-8.9,7.4-14.5,8.2-16.9c-0.7,0.4-1.6,1-2.7,1.7c-0.6,0.4-1.2,0.6-1.7,0.6
-					c-0.5,0-1-0.3-1.3-0.8c-0.2-0.4-0.3-0.8-0.3-1.2c0-1.3,1.2-2.8,3.5-4.3c1.9-1.2,3.6-2.3,5.2-3.1c0.3-0.7,0.4-1.2,0.5-1.4
-					c0.3-1.1,0.6-1.8,0.9-2.2c0.3-0.4,0.8-0.6,1.5-0.6c1.3,0,2,0.7,2,2.2c2-0.6,3.7-1,5.2-1.3c1.5-0.3,2.8-0.4,3.9-0.4
-					c2.8,0,5.1,1.1,7,3.2c1.8,2,2.7,4.2,2.7,6.7c0,4.3-1.8,8.6-5.4,12.9c-3.1,3.7-6.9,6.5-11.5,8.6c-3.9,1.7-7.9,2.6-11.8,2.6
-					C28.4,41.3,27.3,41.2,25.8,40.9z M37.8,14.8c-0.9,2.8-2.5,6.5-4.6,10.9c-2.6,5.4-4.3,8.9-5.1,10.5c1.6,0.3,2.7,0.4,3.3,0.4
-					c3.3,0,7.1-1.3,11.4-3.9c4.2-2.6,7.5-5.8,9.9-9.6c1.5-2.3,2.2-4.4,2.2-6.2c0-1.6-0.6-2.9-1.7-3.7c-1.1-0.8-2.8-1.2-5-1.2
-					c-1.7,0-3.4,0.2-5.1,0.7C41.4,13.2,39.6,13.9,37.8,14.8z"/></path>
-				</g>
-			</svg>
-
-		</div>
+		<div class="block" style="border:none;"></div>
 		<div class="block">Code</div>
 		<div class="block">Poster</div>
 		<div class="block">Design</div>
