--- a/index2.html
+++ b/index2.html
@@ -67,6 +67,7 @@
 		x=document.documentElement.clientWidth;
 		y=document.documentElement.clientHeight;
 		document.body.style.height=y+"px";
+		document.body.style.width=x+"px";
 		console.log(x,y);
 		if (x<y) {
 			ecross.style.height=70+"px";
