--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,8 @@
 	.block:hover{
 		/*opacity: 0.4;*/
 		color: #908BC5;
-		border-left:solid; 		
+		border-left:solid; 
+		
 		border-width: 2px;
 		/*margin-left: 2px;*/
 	}
@@ -54,7 +55,7 @@
 		<div class="block">Design</div>
 	</div>
 	<div id="content"></div>
-	<div id="back"><img src="back.jpg" style="width:100%;height:100%;"></div>
+	<img id="back" src="back.jpg">
 </body>
 <script type="text/javascript">
 	window.onload=function(){repos ()};
