--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
 		<div class="block">Design</div>
 	</div>
 	<div id="content"></div>
-	<img id="back" src="back.jpg">
+	<img id="back" style="position:fixed;" src="back.jpg">
 </body>
 <script type="text/javascript">
 	window.onload=function(){repos ()};
