--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,10 @@
 </head>
 <style type="text/css">
 	body{
-		/*background-image:url(back.svg);*/
+		background-image:url(back.jpg);
 		/*background-repeat:no-repeat;*/
 		/*background-position:center;*/
+		position:fixed;
 		overflow: hidden;
 		margin: 0;
 		padding: 0;
@@ -48,7 +49,6 @@
 	}
 </style>
 <body>
-	<img id="back" style="position:fixed;" src="back.jpg">
 	<div id="cross">
 		<div class="block" style="border:none;"></div>
 		<div class="block">Code</div>
