--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 	body{
 		background-image:url(back.jpg);
 		/*background-repeat:no-repeat;*/
-		background-position:center;
+		/*background-position:center;*/
 		position:fixed;
 		overflow: hidden;
 		margin: 0;
@@ -42,7 +42,8 @@
 	.block:hover{
 		/*opacity: 0.4;*/
 		color: #908BC5;
-		border-left:solid;		
+		border-left:solid; 
+		
 		border-width: 2px;
 		/*margin-left: 2px;*/
 	}
