--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,user-scalable=0" />
 	<title>Document</title>
 </head>
 <style type="text/css">
