--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <style type="text/css">
 	body{
-		background-image:url(back.jpg);
+		/*background-image:url(back.jpg);*/
 		/*background-repeat:no-repeat;*/
 		/*background-position:center;*/
 		position:fixed;
@@ -29,22 +29,21 @@
 	}
 	.block{
 		/*margin-top: 20px;*/
-		font-size: 18px;
+		font-size: 14px;
 		font-family: "微软雅黑";
 		text-align: center;
 		float: left;
-		width: 70px;
-		height: 70px;
+		width: 60px;
+		height: 60px;
 		color: #fff;
-		line-height: 70px;
+		line-height: 60px;
 		background-color:#000000;
 		transition: all 0.3s linear;
 	}
 	.block:hover{
 		/*opacity: 0.4;*/
 		color: #908BC5;
-		border-left:solid; 
-		
+		border-left:solid;
 		border-width: 2px;
 		/*margin-left: 2px;*/
 	}
@@ -57,6 +56,7 @@
 		<div class="block">Design</div>
 	</div>
 	<div id="content"></div>
+	<img id="back" src="back.jpg">
 </body>
 <script type="text/javascript">
 	window.onload=function(){repos ()};
@@ -71,7 +71,7 @@
 		document.body.style.width=x+"px";
 		console.log(x,y);
 		if (x<y) {
-			ecross.style.height=70+"px";
+			ecross.style.height=60+"px";
 			ecross.style.width="100%";
 			econtent.style.left=0.1*x+"px";
 			econtent.style.top=0.1*y+35+"px";
@@ -80,7 +80,7 @@
 		}
 		else{
 			ecross.style.height="100%";
-			ecross.style.width=70+"px";
+			ecross.style.width=60+"px";
 			econtent.style.left=0.1*x+35+"px";
 			econtent.style.top=0.1*y+"px";
 			eback.style.width="100%";
