--- a/index2.html
+++ b/index2.html
@@ -33,10 +33,10 @@
 		font-family: "微软雅黑";
 		text-align: center;
 		float: left;
-		width: 60px;
-		height: 60px;
+		width: 55px;
+		height: 55px;
+		line-height: 55px;
 		color: #fff;
-		line-height: 60px;
 		background-color:#000000;
 		transition: all 0.3s linear;
 	}
@@ -61,9 +61,9 @@
 <script type="text/javascript">
 	window.onload=function(){repos ()};
 	window.onresize=function(){repos ()};
-	ecross=document.getElementById("cross");
-	econtent=document.getElementById("content");
-	eback=document.getElementById("back");
+	ecross=document.getElementById("cross").style;
+	econtent=document.getElementById("content").style;
+	eback=document.getElementById("back").style;
 	function repos (argument) {
 		x=document.documentElement.clientWidth;
 		y=document.documentElement.clientHeight;
@@ -71,20 +71,20 @@
 		document.body.style.width=x+"px";
 		console.log(x,y);
 		if (x<y) {
-			ecross.style.height=60+"px";
-			ecross.style.width="100%";
-			econtent.style.left=0.1*x+"px";
-			econtent.style.top=0.1*y+35+"px";
-			eback.style.height="100%";
-			eback.style.width=y+"px";
+			ecross.height=55+"px";
+			ecross.width="100%";
+			econtent.left=0.1*x+"px";
+			econtent.top=0.1*y+35+"px";
+			eback.height="100%";
+			eback.width=y+"px";
 		}
 		else{
-			ecross.style.height="100%";
-			ecross.style.width=60+"px";
-			econtent.style.left=0.1*x+35+"px";
-			econtent.style.top=0.1*y+"px";
-			eback.style.width="100%";
-			eback.style.height=x+"px";
+			ecross.height="100%";
+			ecross.width=55+"px";
+			econtent.left=0.1*x+35+"px";
+			econtent.top=0.1*y+"px";
+			eback.width="100%";
+			eback.height=x+"px";
 		};
 	}
 </script>
